[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/Controller/Move_Left2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/Controller/Move_Left.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Controller/Move_Right.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Controller/Move_Right2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Controller/Jump.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Controller/Jump2.png" type="Texture" id=6]
[ext_resource path="res://src/UIs/Controller.gd" type="Script" id=7]

[node name="Controller" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Left" type="TouchScreenButton" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 128, 648 )
scale = Vector2( 4, 4 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="Rigth" type="TouchScreenButton" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 464, 640 )
scale = Vector2( 4, 4 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="Jump" type="TouchScreenButton" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 1640, 640 )
scale = Vector2( 4, 4 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Rigth" to="." method="_on_Rigth_pressed"]
[connection signal="released" from="Rigth" to="." method="_on_Rigth_released"]
[connection signal="pressed" from="Jump" to="." method="_on_Jump_pressed"]
[connection signal="released" from="Jump" to="." method="_on_Jump_released"]
